# ritual

./: Cargo.toml  config.toml
src/: ai.rs  config.rs  discord.rs  main.rs  mapper.rs
src/detector/: mod.rs  processes.rs  x11.rs
src/plugins/: generic.rs  mod.rs  steam.rs  vscode.rs
